--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
         "lint-staged": "^4.0.4",
         "nyc": "^11.1.0",
         "prettier": "^1.6.1",
-        "remark-cli": "^4.0.0",
-        "remark-preset-github": "^0.0.6",
+        "remark-cli": "^5.0.0",
         "xo": "latest"
     },
     "engines": {
@@ -66,9 +65,7 @@
         ]
     },
     "remarkConfig": {
-        "plugins": [
-            "preset-github"
-        ]
+        "plugins": []
     },
     "repository": {
         "type": "git",
