增加 typescript 支持，若干规则，翻译接口和上下文配置

--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
         "cross-env": "^5.0.5",
         "eslint": "^4.5.0",
         "eslint-config-prettier": "latest",
+        "eslint-config-xo-typescript": "^0.1.0",
         "eslint-plugin-prettier": "latest",
+        "eslint-plugin-typescript": "^0.12.0",
         "husky": "^0.14.3",
         "lint-staged": "^4.0.4",
         "nyc": "^11.1.0",
         "prettier": "^1.6.1",
         "remark-cli": "^5.0.0",
+        "typescript-eslint-parser": "^16.0.1",
         "xo": "latest"
     },
     "engines": {
@@ -43,7 +46,7 @@
     ],
     "license": "MIT",
     "lint-staged": {
-        "*.{js,jsx,mjs,ts,tsx,css,less,scss,json,graphql}": [
+        "*.{js,jsx,mjs,tsx,css,less,scss,json,graphql}": [
             "prettier --write --single-quote --trailing-comma none",
             "git add"
         ],
@@ -53,6 +56,7 @@
         ]
     },
     "main": "src/index.js",
+    "typing": "src/index.js",
     "nyc": {
         "check-coverage": true,
         "lines": 100,
@@ -72,7 +76,9 @@
         "url": "https://github.com/seekcx/acr"
     },
     "xo": {
-        "extends": "prettier",
+        "extends": [
+            "prettier"
+        ],
         "plugins": [
             "prettier"
         ],
@@ -103,7 +109,10 @@
             "camelcase": "off",
             "no-warning-comments": "off"
         },
-        "space": true
+        "space": true,
+        "ignores": [
+            "index.d.ts"
+        ]
     },
     "scripts": {
         "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
