--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "acr",
     "description": "An async, extensible, elegant validation.",
-    "version": "1.0.3",
+    "version": "1.0.4",
     "author": "seekcx <abel@seek.cx> (https://abel.seek.cx)",
     "bugs": {
         "url": "https://github.com/seekcx/acr/issues",
@@ -114,6 +114,10 @@
             "index.d.ts"
         ]
     },
+    "files": [
+        "src",
+        "index.d.ts"
+    ],
     "scripts": {
         "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
         "lint": "xo && remark . -qfo",
